--- a/app/templates/members/list.html
+++ b/app/templates/members/list.html
@@ -8,11 +8,12 @@
 <div class="row justify-content-center m-3">
     <div class="col-12 col-md-6">
         <form action="/members/search/" method="post" class="d-flex">
-            <input type="text" name="query" class="form-control me-2" placeholder="Search Members" />
-            <button type="submit" class="btn btn-primary">Search</button>
+            <input type="text" name="query" class="form-control me-1" placeholder="eg: John" />
+            <button type="submit" class="btn btn-primary" style="white-space: nowrap;">Search Members</button>
         </form>
     </div>
 </div>
+
 
 <div class="m-3 text-center">
     <a href="/members/add" class="btn btn-primary">Add New Member</a>
