--- a/app/templates/transactions/list.html
+++ b/app/templates/transactions/list.html
@@ -3,6 +3,7 @@
 {% block body %}
 <div class="container mt-5">
     <h1>Transactions</h1>
+    <p>Results show in the descending order of issue date</p>
     <table class="table">
         <thead>
             <tr>
